...
              Padding(
                padding: const EdgeInsets.only(top: 22),
                child: Text(
                  strings(context).versionAndSendConfirmation(
                    (c.data.text('appVersion')).toString(),
                  ),
                  key: const ValueKey('app-version-footer'),
                  textAlign: TextAlign.center,
                  style: TextStyle(
                    fontSize: 12,
                    height: 1.6,
                    color: colors.onSurfaceVariant,
                  ),
...
